Feat: :sparkles: Update page title and layout
Fix parallax script that was preventing images from showing

--- a/content/1.index.md
+++ b/content/1.index.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-head.title: Judine Fiddler - Photographer
+head.title: Judine Fiddler - Artist | Photographer
 description: Explore my photography portfolio and see the world through my creative lens.
 title: About
 ---
