Update settings.json, package.json, Navbar.vue, MasonryWall.vue, MasonryGallery.vue, and GalleryList.vue

--- a/content/2.galleries.md
+++ b/content/2.galleries.md
@@ -3,9 +3,9 @@ title: Gallery
 layout: default
 ---
 
-:page-header{title=Galleries description="Explore my photography portfolio and see the world through my creative lens. Contact me if you would like to hire me." orientation="center"}
+:page-header{title=Gallery description="Explore my photography portfolio and see the world through my creative lens. Contact me if you would like to hire me." orientation="center"}
 
-:gallery-list{path=gallery}
+:gallery-list{path=galleries}
 
 ::SectionCtaHireMe{.mt-16}
 #title
