--- a/content/2.gallery.md
+++ b/content/2.gallery.md
@@ -5,7 +5,7 @@ layout: default
 
 :page-header{title=Gallery description="Explore my photography portfolio and see the world through my creative lens. Contact me if you would like to hire me." orientation="center"}
 
-:gallery-list{path=galleries}
+:gallery-list{path=gallery}
 
 ::SectionCtaHireMe{.mt-16}
 #title
