Feat: :sparkles: Add Bio page

--- a/content/1.index.md
+++ b/content/1.index.md
@@ -2,7 +2,7 @@
 layout: default
 head.title: Judine Fiddler - Artist | Photographer
 description: Explore my photography portfolio and see the world through my creative lens.
-title: About
+title: Home
 ---
 
 ::HeroText
