--- a/content/stories/1.storie-2.md
+++ b/content/stories/1.storie-2.md
@@ -15,10 +15,17 @@ cover:
 
 ---
 
-<StoriesGalleryHeader
-  date="2023-01-15"
-  location= "Ioannina"
-  camera= "Olympus XA1"
-  film= "Kodak T-MAX 400"
-  description="Traveling the world through the lens of my camera has been an incredible journey filled with excitement, adventure, and endless inspiration. As a young photography enthusiast, I was always drawn to capturing the beauty of the world around me. From cityscapes to landscapes, I was constantly on the lookout for the next shot."
-/>
+::stories-gallery-header
+---
+date: "2023-01-15"
+location: "Ioannina"
+camera: "Olympus XA1"
+film: "Kodak T-MAX 400"
+description: "Traveling the world through the lens of my camera has been an incredible journey filled with excitement, adventure, and endless inspiration. As a young photography enthusiast, I was always drawn to capturing the beauty of the world around me. From cityscapes to landscapes, I was constantly on the lookout for the next shot."
+---
+::
+
+::stories-gallery
+---
+---
+::
