feat: :sparkles: Add instagram setion

--- a/content/1.index.md
+++ b/content/1.index.md
@@ -84,6 +84,11 @@ I am a passionate photographer with a keen eye for capturing the beauty of life 
   ::
 ::
 
+::InstagramSection
+---
+---
+::
+
 
 ::SectionCtaHireMe{.mt-16}
 #title
